<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/pokemonListFragment">

    <fragment
        android:id="@+id/pokemonListFragment"
        android:name="com.fab.home.ui.pokemonlist.PokemonListFragment"
        android:label="@string/title_poke_info"
        tools:layout="@layout/fragment_pokemon_list" >
        <action
            android:id="@+id/action_pokemonListFragment_to_pokemonSpecieFragment"
            app:destination="@id/pokemonSpecieFragment" />
    </fragment>
    <fragment
        android:id="@+id/pokemonSpecieFragment"
        android:name="com.fab.home.ui.specie.PokemonSpecieFragment"
        android:label="@string/title_specie_info"
        tools:layout="@layout/fragment_pokemon_specie" >
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_pokemonSpecieFragment_to_evolutionChainFragment"
            app:destination="@id/evolutionChainFragment" />
        <action
            android:id="@+id/action_pokemonSpecieFragment_to_abilityListFragment"
            app:destination="@id/abilityListFragment" />
    </fragment>
    <fragment
        android:id="@+id/evolutionChainFragment"
        android:name="com.fab.home.ui.evolutionchain.EvolutionChainFragment"
        android:label="@string/title_evolution_chain">
        <argument
            android:name="url"
            app:argType="string" />
        <action
            android:id="@+id/action_evolutionChainFragment_to_pokemonListFragment"
            app:destination="@id/pokemonListFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/abilityListFragment"
        android:name="com.fab.home.ui.abilitylist.AbilityListFragment"
        android:label="@string/title_ability_list"
        tools:layout="@layout/fragment_ability_list" >
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
</navigation>